Login/Signup styling error solved

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" th:href="@{/style.css}">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
         <button type="submit">Continue</button>
     </form>
 
-    <p class="note">Don't have an account? <a href="/register">Sign up</a></p>
+    <p class="note">Don't have an account? <a href="/signup">Sign up</a></p>
 </div>
 
 </body>
