--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" th:href="@{/style.css}">
 </head>
 <body>
 
@@ -23,7 +23,7 @@
         <button type="submit">Sign up</button>
     </form>
 
-    <p class="note">Already have an account? <a href="/">Log inadd</a></p>
+    <p class="note">Already have an account? <a href="/login">Log In</a></p>
 </div>
 
 </body>
